--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <!-- Nav Start -->
                         <div class="classynav" >
                             <ul>
-                                <li><a href="index.php">Home</a></li>
+                                <li><a href="">Home</a></li>
                                 <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
                                 <li><a href="">About</a></li>
                                 <li><a href="">Work Experience</a></li>
@@ -265,7 +265,7 @@
         &copy; Copyright <strong>NabinLopchan</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://nabinloopchan.com.np/">NabinLopchan</a>
+        Designed by <a href="https://www.nabinlopchan.com.np/">NabinLopchan</a>
       </div>
     </div>
   </footer>
