--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
                                 <li><a href="">About</a></li>
                                 <li><a href="">Work Experience</a></li>
-                                <li><a href="">Blogs</a></li>
+                                <li><a href="blog-tamang.html">Blogs</a></li>
                                 <li><a href="">Contact</a></li>
                             </ul>
 
