--- a/blog-tamang.html
+++ b/blog-tamang.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="about-tamang.css">
 
+<!-- Custom styles -->
+<link rel="stylesheet" href="styles/css/styles.css">
+
 
     <title>Tamang Culture</title>
 
@@ -39,7 +42,7 @@
                       <!-- Nav Start -->
                       <div class="classynav" >
                           <ul>
-                              <li><a href="index.php">Home</a></li>
+                              <li><a href="index.html">Home</a></li>
                               <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
                               <li><a href="">About</a></li>
                               <li><a href="">Work Experience</a></li>
@@ -220,9 +223,9 @@
                 <div class="footer-links">
                   <h4>Useful Links</h4>
                   <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About </a></li>
-                    <li><a href="#">Blogs</a></li>
+                    <li><a href="blog-tamang.html">Blogs</a></li>
                     <li><a href="#">Work Experience</a></li>
                   </ul>
                 </div>
@@ -308,11 +311,15 @@
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
     <script src="js/bootstrap/bootstrap.min.js"></script>
     <!-- All Plugins js -->
     <script src="js/plugins/plugins.js"></script>
     <!-- Active js -->
     <script src="js/active.js"></script>
+    <!-- WOW JS -->
+    <script src="js/wow.min.js"></script>
 </body>
 </html>
