--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
  
     <!-- Custom styles -->
 	<link rel="stylesheet" href="styles/css/styles.css">
-
-   
-
+  
 </head>
 
 <body class="home">
@@ -87,7 +85,7 @@
                         <!-- Nav Start -->
                         <div class="classynav" >
                             <ul>
-                                <li><a href="">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
                                 <li><a href="">About</a></li>
                                 <li><a href="">Work Experience</a></li>
@@ -194,9 +192,9 @@
                   <div class="footer-links">
                     <h4>Useful Links</h4>
                     <ul>
-                      <li><a href="#">Home</a></li>
+                      <li><a href="index.html">Home</a></li>
                       <li><a href="#">About </a></li>
-                      <li><a href="#">Blogs</a></li>
+                      <li><a href="blog-tamang.html">Blogs</a></li>
                       <li><a href="#">Work Experience</a></li>
                     </ul>
                   </div>
@@ -265,7 +263,7 @@
         &copy; Copyright <strong>NabinLopchan</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://www.nabinlopchan.com.np/">NabinLopchan</a>
+        Designed by <a href="https://nabinlopchan.com.np/">NabinLopchan</a>
       </div>
     </div>
   </footer>
