--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </nav>
 
-	<div id="head" class="parallax" parallax-speed="2">
+	<div id="head" class="parallax wow fadeInUp" parallax-speed="2">
 		<h1 id="logo" class="text-center">
 			<img class="img-circle" src="styles/images/me.jpg" alt="">
 			<span class="title">Nabin Lopchan</span>
@@ -87,10 +87,10 @@
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
-                                <li><a href="">About</a></li>
-                                <li><a href="">Work Experience</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Work Experience</a></li>
                                 <li><a href="blog-tamang.html">Blogs</a></li>
-                                <li><a href="">Contact</a></li>
+                                <li><a href="#">Contact</a></li>
                             </ul>
 
                         </div>
@@ -170,7 +170,7 @@
 
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 wow fadeInLeft">
 
             <div class="row">
 
@@ -222,7 +222,7 @@
 
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 wow fadeInRight">
 
             <div class="form">
               
@@ -258,7 +258,7 @@
 
       </div>
     </div>
-    <div class="container">
+    <div class="container wow fadeInUp">
       <div class="copyright">
         &copy; Copyright <strong>NabinLopchan</strong>. All Rights Reserved
       </div>
