--- a/blog-tamang.html
+++ b/blog-tamang.html
@@ -44,10 +44,10 @@
                           <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
-                              <li><a href="">About</a></li>
-                              <li><a href="">Work Experience</a></li>
+                              <li><a href="#">About</a></li>
+                              <li><a href="#">Work Experience</a></li>
                               <li><a href="blog-tamang.html">Blogs</a></li>
-                              <li><a href="">Contact</a></li>
+                              <li><a href="#">Contact</a></li>
                           </ul>
 
                       </div>
@@ -201,7 +201,7 @@
 
       <div class="row">
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 wow fadeInLeft">
 
           <div class="row">
 
@@ -253,7 +253,7 @@
 
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-lg-6 wow fadeInRight">
 
           <div class="form">
             
@@ -289,7 +289,7 @@
 
     </div>
   </div>
-  <div class="container">
+  <div class="container wow fadeInUp">
     <div class="copyright">
       &copy; Copyright <strong>NabinLopchan</strong>. All Rights Reserved
     </div>
