--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
                                 <li><a href="#">About</a></li>
-                                <li><a href="#">Work Experience</a></li>
-                                <li><a href="blog-tamang.html">Blogs</a></li>
+                                <li><a href="task.html">Task</a></li>
+                                <li><a href="blog.html">Blogs</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
 
@@ -195,7 +195,7 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="#">About </a></li>
                       <li><a href="blog-tamang.html">Blogs</a></li>
-                      <li><a href="#">Work Experience</a></li>
+                      <li><a href="task.html">Task</a></li>
                     </ul>
                   </div>
 
