--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
   <!-- Custom styles -->
   <link rel="stylesheet" href="styles/css/styles.css">
 
-<title>Tamang Culture</title>
+<title>Projects Work</title>
 </head>
 
 <body>
@@ -59,8 +59,8 @@
     <section id="about">
         <div class="container">
           <header class="section-header wow fadeInUp">
-            <h3>Blogs</h3>
-            <p>i write one, i become one!! </p>
+            <h3>Projects</h3>
+            <p>Things i have done!!! </p>
           </header>
   
  <!-- ##### Popular Package Start Here ##### -->
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-heading">
-                    <h3> Popular Blogs</h3>
+                    <h3> Some Projects</h3>
                 </div>
             </div>
         </div>
@@ -78,31 +78,14 @@
            <!-- Single Popular package -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-popular-package mb-100 wow fadeInUp" data-wow-delay="500ms">
-                    <img src="img/culture/tamangCulture.jpg" alt="">
+                    <img src="styles/images/fim.png" alt="">
                     <!-- package Content -->
                     <div class="package-content">
-                        <a href="#"><h4>About Tamang Culture</h4></a>
+                        <a href="#"><h4>File Fntegrity Monitoring</h4></a>
                         <div class="meta d-flex align-items-center">
-                            <a href="blog-tamang.html">The dynamics of Tamang Culture.</a>
+                            <a href="https://github.com/Nabin0727/Final-FIM-Project.git">Real time file integrity monitoring with logging and alerting.</a>
                         </div>
-                        <p>Tamang are one of the indigenous inhabitants of Nepal. 
-                         Their ancestral domain (land) is popularly known as Tamsaling. Tamsaling' means
-                          'Tam' refers to the language spoken by Tamang people,
-                          'sa' refers to the land and 'ling' refers to the territory or fragment.</p>
-                    </div>
-                    <!-- see Rating Fee -->
-                    <div class="see-rating-fee d-flex justify-content-between">
-                        <div class="see-rating h-100 d-flex align-items-center">
-                            <div class="see">
-                                <i class="fa fa-user" aria-hidden="true"></i>  321
-                            </div>
-                            <div class="rating">
-                                <i class="fa fa-star" aria-hidden="true"></i> 4.7
-                            </div>
-                        </div>
-                        <div class="package-fee h-100">
-                            <a href="#">Top</a>
-                        </div>
+                        <p>As part of a security procedure called File Integrity Monitoring (FIM), files or systems are tracked and modifications to them are recognized. Keeping files and system configurations in their original condition and preventing unauthorized or malicious modifications are the goals of FIM.</p>
                     </div>
                 </div>
             </div>
@@ -110,35 +93,37 @@
             <!-- Single Popular package -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="single-popular-package mb-100 wow fadeInUp" data-wow-delay="750ms">
-                    <img src="styles/images/humanity.png" alt="">
+                    <img src="styles/images/C-programming.png" alt="">
                     <!-- package Content -->
                     <div class="package-content">
-                       <a href="#"> <h4>Why we aren't social?</h4></a>
+                       <a href="#"> <h4>Quizmania with C-programming</h4></a>
                         <div class="meta d-flex align-items-center">
-                            <a href="why-aren't-we-humans.html">A prespective into the unknown.</a>
+                            <a href="https://github.com/Nabin0727/C-Mini-Project.git">KBC style quiz project with c-programming</a>
                         </div>
-                        <p>My mind is always occupied by a question, ‘why do we live in society/why do we have 
-                            society? Just because we are 
-                            social or we are social because we live 
-                            in society?’. The reality is we live in society though we are not social and we 
-                            are social still we don’t live in society.</p>
-                    </div>
-                    <!-- see Rating Fee -->
-                    <div class="see-rating-fee d-flex justify-content-between">
-                        <div class="see-rating h-100 d-flex align-items-center">
-                            <div class="see">
-                                <i class="fa fa-user" aria-hidden="true"></i> 253
-                            </div>
-                            <div class="rating">
-                                <i class="fa fa-star" aria-hidden="true"></i> 4.9
-                            </div>
-                        </div>
-                        <div class="package-fee h-100">
-                            <a href="#">Top</a>
-                        </div>
+                        <p>C is a high-level programming language that Dennis Ritchie created at Bell Labs in the early 1970s. A general-purpose programming language called C is frequently used to create embedded systems, device drivers, system software, and other applications.
+                        </p>
                     </div>
                 </div>
             </div>
+                        <!-- Single Popular package -->
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="single-popular-package mb-100 wow fadeInUp" data-wow-delay="750ms">
+                                <img src="styles/images/machine leatning.jpg" alt="">
+                                <!-- package Content -->
+                                <div class="package-content">
+                                   <a href="#"> <h4>Fake News Detection-Machine Learning</h4></a>
+                                    <div class="meta d-flex align-items-center">
+                                        <a href="https://github.com/Nabin0727/navie-bayes-implementation-for-fakenews.git">Implementation of Navie Bayes Algorithm for fake news detection.</a>
+                                    </div>
+                                    <p>For text classification tasks, such as fake news identification, the well-known 
+                                        machine learning method Naive Bayes is frequently utilized. The procedure is based on Bayes' 
+                                        theorem, a probability theory that enables us to 
+                                        estimate an event's likelihood based on existing data or knowledge.
+                            
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
         </div>
     </div>
 </section>
