--- a/blog-tamang.html
+++ b/blog-tamang.html
@@ -41,9 +41,9 @@
                           <ul>
                               <li><a href="index.html">Home</a></li>
                               <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
-                              <li><a href="#">About</a></li>
+                              <li><a href="projects.html">Projects</a></li>
                               <li><a href="task.html">Task</a></li>
-                              <li><a href="blog-tamang.html">Blogs</a></li>
+                              <li><a href="blog.html">Blogs</a></li>
                               <li><a href="#">Contact</a></li>
                           </ul>
 
@@ -247,8 +247,8 @@
                   <h4>Useful Links</h4>
                   <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About </a></li>
-                    <li><a href="blog-tamang.html">Blogs</a></li>
+                    <li><a href="projects.html">Projects </a></li>
+                    <li><a href="blog.html">Blogs</a></li>
                     <li><a href="task.html">Task</a></li>
                   </ul>
                 </div>
