--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <li><a href="#" data-placement="top" title="Instagram"><i class="fa fa-instagram fa-1x"></i></a></li>
               <ul class="info">
                 <li>
-                  <p><i class="fa fa-phone"></i>+977 986 1530 182</p>
+                  <p><i class="fa fa-phone"></i>+977 986 XXXX XXX</p>
                 </li>
-                <li><a href="#"><i class="fa fa-envelope"></i>lopchannabin138@gmail.com</a></li>
+                <li><a href="#"><i class="fa fa-envelope"></i>contact.nabin@gmail.com</a></li>
               </ul>
             </div>
           </nav>
@@ -85,7 +85,7 @@
                         <div class="classynav" >
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
+                                <li><a href="" download>Download CV</a></li>
                                 <li><a href="projects.html">Projects</a></li>
                                 <li><a href="task.html">Task</a></li>
                                 <li><a href="blog.html">Blogs</a></li>
@@ -201,11 +201,11 @@
                   <div class="footer-links">
                     <h4>Contact Me</h4>
                     <p>
-                      Tarkeshower Municipality 11 <br>
-                      Nepaltar Kathamndu<br>
+                      ABC Municipality XX <br>
+                      ABC Kathamndu<br>
                       Nepal <br>
-                      <strong>Phone:</strong> +977 986 1530 182<br>
-                      <strong>Email:</strong> lopchannabin138@gmail.com<br>
+                      <strong>Phone:</strong> +977 986 xxxxx xxx<br>
+                      <strong>Email:</strong> contact.nabin@gmail.com<br>
                     </p>
                   </div>
 
