--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                       <div class="classynav" >
                           <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
+                              <li><a href="x" download>Download CV</a></li>
                               <li><a href="projects.html">Projects</a></li>
                               <li><a href="task.html">Task</a></li>
                               <li><a href="blog.html">Blogs</a></li>
@@ -81,7 +81,7 @@
                     <img src="styles/images/fim.png" alt="">
                     <!-- package Content -->
                     <div class="package-content">
-                        <a href="#"><h4>File Fntegrity Monitoring</h4></a>
+                        <a href="#"><h4>File Integrity Monitoring</h4></a>
                         <div class="meta d-flex align-items-center">
                             <a href="https://github.com/Nabin0727/Final-FIM-Project.git">Real time file integrity monitoring with logging and alerting.</a>
                         </div>
@@ -171,11 +171,11 @@
                 <div class="footer-links">
                   <h4>Contact Me</h4>
                   <p>
-                    Tarkeshower Municipality 11 <br>
-                    Nepaltar Kathamndu<br>
+                    xx Municipality xx <br>
+                    xx Kathamndu<br>
                     Nepal <br>
-                    <strong>Phone:</strong> +977 986 1530 182<br>
-                    <strong>Email:</strong> lopchannabin138@gmail.com<br>
+                    <strong>Phone:</strong> +977 986 xx xxx<br>
+                    <strong>Email:</strong> contact.nabin@gmail.com<br>
                   </p>
                 </div>
 
