--- a/why-aren't-we-humans.html
+++ b/why-aren't-we-humans.html
@@ -40,7 +40,7 @@
                       <div class="classynav" >
                           <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="Nabin_Lopchan_CV.docx" download>Download CV</a></li>
+                              <li><a href="cx" download>Download CV</a></li>
                               <li><a href="projects.html">Projects</a></li>
                               <li><a href="task.html">Task</a></li>
                               <li><a href="blog.html">Blogs</a></li>
@@ -196,11 +196,11 @@
                 <div class="footer-links">
                   <h4>Contact Me</h4>
                   <p>
-                    Tarkeshower Municipality 11 <br>
-                    Nepaltar Kathamndu<br>
+                    xxx Municipality xx <br>
+                    xxx Kathamndu<br>
                     Nepal <br>
-                    <strong>Phone:</strong> +977 986 1530 182<br>
-                    <strong>Email:</strong> lopchannabin138@gmail.com<br>
+                    <strong>Phone:</strong> +977 986 xxx xx<br>
+                    <strong>Email:</strong> contact.nabin@gmail.com<br>
                   </p>
                 </div>
 
